2008-06-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=19784

        Properly handle untermianted <!-- comments in <textarea>s.

        Tests: fast/parser/open-comment-in-script-tricky.html
               fast/parser/open-comment-in-style.html
               fast/parser/open-comment-in-textarea.html

        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::finish):

2008-06-27  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Alder.

        Fix <https://bugs.webkit.org/show_bug.cgi?id=19784>:
          Text areas in Wikipedia edit pages are empty, following content is missing

        Don't treat entities as comment starters in parseSpecial.

        Tests: fast/parser/comment-in-iframe.html
               fast/parser/entity-comment-in-iframe.html
               fast/parser/entity-comment-in-script-tricky.html
               fast/parser/entity-comment-in-style.html
               fast/parser/entity-comment-in-textarea.html
               fast/parser/entity-comment-in-title.html

        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::parseSpecial):

2008-06-27  Antti Koivisto  <antti@apple.com>

        Reviewed by Oliver.
        
        <rdar://problem/6030720> 
        REGRESSION: Discrete animation between incompatible paths does not work

        Fall back to discrete path animation if paths are not suitable for morphing.
        
        Test: svg/custom/animate-path-discrete.svg
        
        * svg/SVGAnimateElement.cpp:
        (WebCore::SVGAnimateElement::calculateAnimatedValue):

2008-06-26  David Smith  <catfish.man@gmail.com>

        Reviewed by Sam Weinig.
        
        https://bugs.webkit.org/show_bug.cgi?id=19002
        
        Optimize simple id selectors in querySelector/querySelectorAll. 
        ~4.4x speedup on the 4 subtests of http://webkit.org/perf/slickspeed/ that it applies to.

        * dom/Document.h: